# pythonic-fp-numpy

./: CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: static.yml
docs/: Makefile  conf_custom.py  conf_devel.py  conf_release.py  index_custom.rst  index_devel.rst  index_release.rst
docs/source/: changelog.rst  description.rst  index.rst  releases.rst  usage.rst
docs/source/docs/: hashable_wrapped_ndarray.rst  index.rst
src/pythonic_fp/numpy/: __init__.py  hashable_wrapped_ndarray.py  hashable_wrapped_ndarray.pyi  hwrap.py
tests/hashable_wrapped_ndarray/: test_HWrapNDArrayNumber.py
tests/hwrap/: test_hwrap.py
