[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp-numpy"
version = "0.1.3"
readme = "README.rst"
requires-python = ">=3.13"
authors = [
  { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
keywords = [
  "numpy",
  "ndarray",
  "hashable",
  "wrap",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=2.3.4",
]
dynamic = ["description"]

[project.urls]
Changelog = "https://github.com/grscheller/pythonic-fp-numpy/blob/main/CHANGELOG.rst"
Documentation = "https://grscheller.github.io/pythonic-fp-numpy/"
Homepage = "https://grscheller.github.io/pythonic-fp/homepage/html/"
Source = "https://github.com/grscheller/pythonic-fp-numpy"

[project.optional-dependencies]
test = [
  "boring-math-abstract-algebra>=1.1.0",
  "pytest>=8.4.1",
]

[tool.flit.module]
name = "pythonic_fp.numpy"

[tool.mypy]
explicit_package_bases = true
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
dmypy = false
strict = true
report_progress = true

[tool.pytest]
addopts = [
  "-ra",
]
consider_namespace_packages = true
testpaths = ["tests/"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "E731",
  "C901",
]
"**/*.py" = ["E741"]

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
